--- a/travelata-master/src/_includes/parts/home/cultura-areco.njk
+++ b/travelata-master/src/_includes/parts/home/cultura-areco.njk
@@ -34,15 +34,22 @@
               mejores artesanos y orfebres del país, se han radicado ahi muchos
               artistas plásticos, músicos y escritores de Argentina.”
             </p>
-            <div class="flex flex-col items-start gap-x-4">
+            <div class="md:flex flex-col items-start gap-x-4 hidden">
               <span
                 class="text-orangeTropezon parrafo flex items-center justify-center gap-x-2 tracking-widest"
                 ><hr class="border-t border-orangeTropezon w-[2.5rem]" />
-                Juan Cruz Talia, dueño de El Tropezón
-              </span>
-              <span class="text-orangeTropezon parrafo tracking-widest"
+                Juan Cruz Talia, dueño de El Tropezón </span
+              ><span class="text-orangeTropezon parrafo tracking-widest"
                 >de Areco.</span
               >
+            </div>
+
+            <div class="md:hidden flex flex-col items-start gap-x-4">
+              <span
+                class="text-orangeTropezon parrafo flex items-center justify-center gap-x-2 tracking-widest"
+                ><hr class="border-t border-orangeTropezon w-[2.5rem]" />
+                Juan Cruz Talia, dueño de El Tropezón de Areco
+              </span>
             </div>
           </div>
         </div>
