--- a/travelata-master/src/_includes/parts/home/responsables-home.njk
+++ b/travelata-master/src/_includes/parts/home/responsables-home.njk
@@ -22,7 +22,7 @@
         <h1
           class="text-xs lg:text-sm xl:text-[0.9rem] 2xl:xl:text-[1.1rem] font-hoeflerText text-blueTropezon text-center pt-5 tracking-widest"
         >
-          TOMÁS, JUAN CRUZ Y OSCAR TALIA
+          TOMÁS, OSCAR Y JUAN CRUZ TALIA
         </h1>
       </div>
 
@@ -44,8 +44,8 @@
         data-x-intersect="anime({ targets: $refs.popularToursTitle, translateY: [100, 0], opacity: [0 , 1], easing: 'linear', duration: 500 })"
       >
         <h2 class="titular-principal text-blueTropezon mt-2 mb-2 md:mb-8">
-          CONOCÉ LOS <br />
-          RESPONSABLES <br />
+          CONOCÉ A LOS <br />
+          DESARROLLADORES <br />
           DEL PROYECTO
         </h2>
         <h6
@@ -73,8 +73,8 @@
       data-x-intersect="anime({ targets: $refs.popularToursTitle, translateY: [100, 0], opacity: [0 , 1], easing: 'linear', duration: 500 })"
     >
       <h2 class="titular-principal text-blueTropezon mt-2 mb-2">
-        CONOCÉ LOS <br />
-        RESPONSABLES <br />
+        CONOCÉ A LOS <br />
+        DESARROLLADORES <br />
         DEL PROYECTO
       </h2>
       <h6
