--- a/travelata-master/src/_includes/parts/home/contenido-tropezon.njk
+++ b/travelata-master/src/_includes/parts/home/contenido-tropezon.njk
@@ -76,7 +76,7 @@
         <div class="w-full lg:w-1/2 flex flex-col gap-y-5 md:gap-y-9">
           <div class="flex justify-end w-full md:w-auto">
             <h2 class="text-orangeTropezon titular-principal text-right">
-              RECITALES <br />
+              LECTURA <br />
               DE CUENTOS
             </h2>
           </div>
