--- a/travelata-master/src/_includes/layouts/base-en.njk
+++ b/travelata-master/src/_includes/layouts/base-en.njk
@@ -58,12 +58,12 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   </head>
   <body>
-    {% include "components/nav.njk" %}
+    {% include "components/nav-en.njk" %}
     <div class="site-wrapper">
       <div class="site-content">
         {{ content | safe }}
       </div>
-      {% include "components/footer.njk" %}
+      {% include "components/footer-en.njk" %}
     </div>
     <script defer src="//code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script
