--- a/travelata-master/src/_includes/parts/home/contenido-tropezon-en.njk
+++ b/travelata-master/src/_includes/parts/home/contenido-tropezon-en.njk
@@ -10,21 +10,21 @@
       >
         <div class="w-full lg:w-1/2 flex flex-col gap-y-5 md:gap-y-9">
           <div class="flex w-full md:w-auto">
-            <h2 class="text-orangeTropezon titular-principal">
-              PODA ANUAL <br />
-              DE JAZMINES
+            <h2 class="text-orangeTropezon titular-principal uppercase">
+              Annual Jasmine <br />
+              Pruning
             </h2>
           </div>
 
           <div class="">
             <p class="parrafo text-blueTropezon lg:pr-10">
-              Anualmente realizamos un evento abierto a propietarios, amigos y
-              familiares para podar nuestro más de 2.000 jazmines del cabo que
-              junto con 6.000 árboles y arbustos de más de 400 especies componen
-              la arboleda del Tropezón. <br />
-              Una oportunidad única para conocer y conectar con los vecinos del
-              barrio mientras compartimos una velada con música, comida
-              tradicional, información relevante y mucha naturaleza.
+              Every year, we organise an open event for homeowners, friends, and
+              family to prune our over 2,000 Cape Jasmine plants which along
+              with 6,000 trees and shrubs from over 400 species make up the
+              Tropezón's wooded area. <br />
+              It's a unique opportunity to meet and connect with neighbourhood
+              residents while enjoying an evening of music, traditional food,
+              useful information, and plenty of nature.
             </p>
           </div>
         </div>
@@ -82,11 +82,11 @@
 
           <div class="flex flex-col justify-end">
             <p class="parrafo text-white text-right">
-              Propietario desde 2021 <br />
-              Nació en Mercedes, Buenos Aires, en 1971. <br />
-              Fundó Editorial Orsai y Orsai Audiovisuales. <br />
-              Dirige la revista Orsai (crónica) y Bonsai <br />
-              (infantil).
+              Proprietor of land since 2021 <br />
+              Born in Mercedes, Province of Buenos Aires in 1971. <br />
+              Founded Editorial Orsai and Orsai Audiovisuals. <br />
+              He directs Orsai (chronicles) and Bonsai (children's) <br />
+              magazines.
             </p>
           </div>
         </div>
@@ -134,17 +134,19 @@
       >
         <div class="w-full lg:w-1/2 flex flex-col gap-y-5 md:gap-y-9">
           <div class="flex w-full md:w-auto">
-            <h2 class="text-blueTropezon titular-principal">CARRUAJES</h2>
+            <h2 class="text-blueTropezon titular-principal uppercase">
+              Carriages
+            </h2>
           </div>
 
           <div class="">
             <p
               class="parrafo text-orangeTropezon md:max-w-prose xl:pr-28 xl:max-w-[61ch] 2xl:max-w-[70ch]"
             >
-              El Tropezón ha invitado a familiares, amigos e interesados en el
-              proyecto a recorrer el barrio en carruajes, brindando la
-              oportunidad de sumergirse en la tradición y conocer los encantos
-              del lugar en un recorrido único.
+              El Tropezón has invited family members, friends, and those
+              interested in the project to take a carriage ride through the
+              neighbourhood, providing an opportunity to immerse themselves in
+              tradition and experience the charms of the place in a unique tour.
             </p>
           </div>
         </div>
@@ -190,16 +192,18 @@
       >
         <div class="w-full lg:w-1/2 flex flex-col gap-y-5 md:gap-y-9">
           <div class="flex justify-end w-full md:w-auto">
-            <h2 class="text-white titular-principal text-right">LANZAMIENTO</h2>
+            <h2 class="text-white titular-principal text-right uppercase">
+              Launch
+            </h2>
           </div>
 
           <div class="flex flex-col justify-end">
             <p class="parrafo text-orangeTropezon text-right">
-              El día del lanzamiento de El Tropezón fue una experiencia
-              inolvidable. Los invitados tuvieron la oportunidad de explorar los
-              terrenos y conocer los detalles del proyecto. Durante el evento,
-              disfrutaron de un exquisito asado, con vino y una guitarreada
-              criolla.
+              The day of the launching of El Tropezón was an unforgettable
+              experience. Guests had the opportunity to explore the grounds and
+              learn about the project's details. During the event, they enjoyed
+              a delicious barbecue, accompanied by wine and a traditional guitar
+              performance.
             </p>
           </div>
         </div>
