--- a/travelata-master/src/_includes/parts/home/responsables-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/responsables-home-en.njk
@@ -1,12 +1,12 @@
 <section class="bg-white pb-14 md:pt-0 md:pb-40 relative md:overflow-hidden">
   <!--INDICE-->
   <div
-    class="absolute -left-8 top-[10rem] xl:top-[14rem] hidden md:flex flex-col items-center gap-14"
+    class="absolute -left-4 top-[10rem] xl:top-[14rem] hidden md:flex flex-col items-center gap-14"
   >
     <h1
       class="-rotate-90 text-[0.88rem] font-hoeflerText text-orangeTropezon tracking-widest"
     >
-      <i>Sobre nosotros</i>
+      <i>About us</i>
     </h1>
     <div class="border-l-[0.03px] border-orangeTropezon h-64"></div>
   </div>
@@ -22,7 +22,7 @@
         <h1
           class="text-xs lg:text-sm xl:text-[0.9rem] 2xl:xl:text-[1.1rem] font-hoeflerText text-blueTropezon text-center pt-5 tracking-widest"
         >
-          TOMÁS, OSCAR HÉTOR Y JUAN CRUZ TALIA
+          TOMÁS, OSCAR HÉTOR & JUAN CRUZ TALIA
         </h1>
       </div>
 
@@ -44,9 +44,9 @@
         data-x-intersect="anime({ targets: $refs.popularToursTitle, translateY: [100, 0], opacity: [0 , 1], easing: 'linear', duration: 500 })"
       >
         <h2 class="titular-principal text-blueTropezon mt-2 mb-2 md:mb-8">
-          CONOCÉ A LOS <br />
-          CREADORES DEL <br />
-          DESARROLLO
+          MEET THE <br />
+          CREATORS OF THE <br />
+          DEVELOPMENT
         </h2>
         <h6
           class="text-orangeTropezon tracking-widest text-xs md:text-sm xl:text-[1.29rem] xl:leading-7 font-tradeGothicLt leading-6"
@@ -57,8 +57,8 @@
         <div class="pt-10 flex justify-center items-center">
           <a
             class="border-b border-blueTropezon hover:border-orangeTropezon transition ease-in-out duration-300 text-blueTropezon hover:text-orangeTropezon"
-            href="/quienes-somos/"
-            ><span class="btn-ver">Ver más</span></a
+            href="/quienes-somos-en/"
+            ><span class="btn-ver">See more</span></a
           >
         </div>
       </div>
@@ -73,9 +73,9 @@
       data-x-intersect="anime({ targets: $refs.popularToursTitle, translateY: [100, 0], opacity: [0 , 1], easing: 'linear', duration: 500 })"
     >
       <h2 class="titular-principal text-blueTropezon mt-2 mb-2">
-        CONOCÉ A LOS <br />
-        CREADORES DEL <br />
-        DESARROLLO
+        MEET THE <br />
+        CREATORS OF THE <br />
+        DEVELOPMENT
       </h2>
       <h6
         class="text-orangeTropezon tracking-widest text-xs sm:text-sm font-tradeGothicLt leading-4"
@@ -86,8 +86,8 @@
       <div class="pt-5">
         <a
           class="border-b border-blueTropezon hover:border-orangeTropezon transition ease-in-out duration-300 text-blueTropezon hover:text-orangeTropezon"
-          href="/quienes-somos/"
-          ><span class="btn-ver">Ver más</span></a
+          href="/quienes-somos-en/"
+          ><span class="btn-ver">See more</span></a
         >
       </div>
     </div>
@@ -108,7 +108,7 @@
       <h1
         class="text-[0.8rem] font-hoeflerText text-blueTropezon pt-5 tracking-widest"
       >
-        TOMÁS, OSCAR HÉTOR Y JUAN CRUZ TALIA
+        TOMÁS, OSCAR HÉTOR & JUAN CRUZ TALIA
       </h1>
     </div>
     <!--RESPONSABLES MOB-->
