--- a/travelata-master/src/_includes/components/nav-en.njk
+++ b/travelata-master/src/_includes/components/nav-en.njk
@@ -35,7 +35,7 @@
           href="#formulario-desk"
           class="text-orangeTropezon w-1/3 justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
         >
-          <span>Coordiná</span><span>tu</span><span>visita</span>
+          <span>Schedule</span><span>your</span><span>visit</span>
         </a>
       </div>
 
@@ -68,7 +68,7 @@
             >
               <li>
                 <a
-                  href="/"
+                  href="/home-en/"
                   class="border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
                 >
                   Home</a
@@ -76,7 +76,7 @@
               </li>
               <li>
                 <a
-                  href="/tropezon/"
+                  href="/tropezon-en/"
                   class="border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
                 >
                   El Tropezón de Areco</a
@@ -84,28 +84,28 @@
               </li>
               <li>
                 <a
-                  href="/areco/"
+                  href="/areco-en/"
                   class="border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
                   >San Antonio de Areco</a
                 >
               </li>
               <li>
                 <a
-                  href="/quienes-somos/"
+                  href="/quienes-somos-en/"
                   class="border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
-                  >Quiénes somos</a
+                  >About us</a
                 >
               </li>
               <li>
                 <a
                   href="#formulario-desk"
                   class="hidden md:block border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
-                  >Contacto</a
+                  >Contact</a
                 >
                 <a
                   href="#formulario-mob"
                   class="mobile block md:hidden border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
-                  >Contacto</a
+                  >Contact</a
                 >
               </li>
 
@@ -139,11 +139,10 @@
                 </div>
 
                 <div>
-                  <a href="/">
-                    <span class="font-extrabold text-white">ES</span></a
+                  <a href="/"> <span class="">ES</span></a> |
+                  <a href="/home-en/"
+                    ><span class="font-extrabold text-white">EN</span></a
                   >
-                  |
-                  <a href="/home-en/"><span class="">EN</span></a>
                 </div>
               </li>
             </ul>
