--- a/travelata-master/src/_includes/components/footer-en.njk
+++ b/travelata-master/src/_includes/components/footer-en.njk
@@ -2,7 +2,7 @@
   <footer class="site-footer container">
     <div class="grid grid-cols-1 lg:grid-cols-4 mx-auto py-4">
       <div class="widget py-0 col-span-1 mx-0 flex justify-center lg:block">
-        <a href="/" class="w-32 block">
+        <a href="/home-en/" class="w-32 block">
           {% include "svg/el_tropezon_logo_color.svg" %}
         </a>
       </div>
