--- a/travelata-master/src/_includes/components/nav.njk
+++ b/travelata-master/src/_includes/components/nav.njk
@@ -1,6 +1,7 @@
 <div data-x-data="{ showTopNavToolbar: true }" class="">
   <nav
     class="bg-blueTropezon navbar fixed w-full z-50 transition duration-500 delay-200 h-[5.5rem] 4xl:h-[6.875rem] shadow-2xl"
+    id="header-nav"
   >
     <div
       class="flex items-center justify-between flex-wrap bg-blueTropezon h-full px-5"
@@ -33,6 +34,7 @@
 
         <a
           href="#formulario-desk"
+          id="anclaje-visita"
           class="text-orangeTropezon w-1/3 justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
         >
           <span>Coordiná</span><span>tu</span><span>visita</span>
