--- a/travelata-master/src/_includes/components/nav-en.njk
+++ b/travelata-master/src/_includes/components/nav-en.njk
@@ -21,7 +21,7 @@
           />
         </button>
         <a
-          href="/"
+          href="/home-en/"
           class="w-1/3 flex justify-end md:justify-center items-center"
         >
           <img
