--- a/travelata-master/src/_includes/components/contacto-fellow.njk
+++ b/travelata-master/src/_includes/components/contacto-fellow.njk
@@ -1,4 +1,4 @@
-<section class="bg-blueTropezon relative">
+<section class="bg-blueTropezon relative" id="formulario-section">
   <img
     class="absolute top-0 w-full h-full object-cover"
     src="../../assets/img/trama.png"
@@ -9,7 +9,7 @@
       class="flex flex-col lg:flex-row items-start lg:items-center py-20 lg:pt-0 lg:pb-20"
     >
       <div class="mb-10">
-        <h2 class="titular-principal text-white">
+        <h2 class="titular-principal text-white pt-5 lg:pt-0">
           COORDINÁ<br class="" />
           TU VISITA.
         </h2>
