--- a/travelata-master/src/_includes/components/footer-en.njk
+++ b/travelata-master/src/_includes/components/footer-en.njk
@@ -58,7 +58,11 @@
             >
           </li>
           <li class="mb-1">
-            <a class="tracking-widest">info@eltropezondeareco.com</a>
+            <a
+              href="mailto:info@eltropezondeareco.com"
+              class="tracking-widest hover:underline"
+              >info@eltropezondeareco.com</a
+            >
           </li>
           <li class="mb-1">
             <a class="tracking-widest">011-4343-2530</a>
@@ -69,9 +73,10 @@
         class="widget py-5 xl:py-0 lg:col-span-1 col-span-1 lg:mx-auto xl:mx-0 text-center lg:text-left flex flex-col items-center lg:"
       >
         <h5
-          class="text-orangeTropezon font-hoeflerText text-base mb-4 tracking-[0.2em] uppercase text-left md:ml-0"
+          class="text-orangeTropezon font-hoeflerText text-base mb-4 tracking-[0.2em] uppercase text-left md:ml-0 text-center"
         >
-          Social media
+          Social <br />
+          media
         </h5>
         <div class="flex space-x-4 items-center justify-center">
           <a
