--- a/travelata-master/src/_includes/components/footer.njk
+++ b/travelata-master/src/_includes/components/footer.njk
@@ -58,7 +58,11 @@
             >
           </li>
           <li class="mb-1">
-            <a class="tracking-widest">info@eltropezondeareco.com</a>
+            <a
+              href="mailto:info@eltropezondeareco.com"
+              class="tracking-widest hover:underline"
+              >info@eltropezondeareco.com</a
+            >
           </li>
           <li class="mb-1">
             <a class="tracking-widest">011-4343-2530</a>
