--- a/travelata-master/src/_includes/components/nav-en.njk
+++ b/travelata-master/src/_includes/components/nav-en.njk
@@ -32,7 +32,7 @@
         </a>
 
         <a
-          href="#formulario-desk"
+          href="#formulario-section"
           class="text-orangeTropezon w-1/3 justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
         >
           <span>Schedule</span><span>your</span><span>visit</span>
@@ -98,12 +98,12 @@
               </li>
               <li>
                 <a
-                  href="#formulario-desk"
+                  href="#formulario-section"
                   class="hidden md:block border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
                   >Contact</a
                 >
                 <a
-                  href="#formulario-mob"
+                  href="#formulario-section"
                   class="mobile block md:hidden border-b border-b-transparent hover:border-blueTropezon transition-all ease-in-out duration-300 hover:text-white"
                   >Contact</a
                 >
@@ -113,13 +113,13 @@
                 class="flex justify-between absolute bottom-32 md:bottom-10 w-full"
               >
                 <div class="flex gap-x-5">
-                  <a href="#formulario-desk" class="hidden md:block"
+                  <a href="#formulario-section" class="hidden md:block"
                     ><img
                       src="../../assets/img/email-mob.svg"
                       alt=""
                       class="h-6 w-6"
                   /></a>
-                  <a href="#formulario-mob" class="block md:hidden"
+                  <a href="#formulario-section" class="block md:hidden"
                     ><img
                       src="../../assets/img/email-mob.svg"
                       alt=""
