--- a/travelata-master/src/_includes/parts/home/caracteristicas-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/caracteristicas-home-en.njk
@@ -373,7 +373,7 @@
         </div>
       </div>
       <div
-        class="hidden md:grid grid-cols-5 pb-4 text-[0.75rem] xl:text-[0.92rem] font-tradeGothicLtBold text-blueTropezon"
+        class="hidden md:grid grid-cols-5 pb-4 text-[0.75rem] xl:text-[0.85rem] 2xl:text-[0.92rem] font-tradeGothicLtBold text-blueTropezon"
       >
         <div class="flex items-center justify-start gap-x-2 w-full">
           <img
