--- a/travelata-master/src/_includes/parts/home/contenido-tropezon.njk
+++ b/travelata-master/src/_includes/parts/home/contenido-tropezon.njk
@@ -98,7 +98,7 @@
             <img
               src="../../../assets/img/video-caseari.png"
               alt=""
-              class="h-[16rem] sm:h-full w-full object-cover"
+              class="h-[16rem] sm:h-[20rem] md:h-full w-full object-cover"
             />
             <a href="#" id="play-button-cuentos" class="absolute">
               <img
@@ -156,7 +156,7 @@
             <img
               src="../../../assets/img/carruajes.png"
               alt=""
-              class="h-[16rem] sm:h-full w-full object-cover"
+              class="h-[16rem] sm:h-[20rem] md:h-full w-full object-cover"
             />
             <a href="" class="absolute"
               ><img
@@ -211,7 +211,7 @@
             <img
               src="../../../assets/img/herotropezon.jpg"
               alt=""
-              class="h-[16rem] sm:h-full w-full object-cover"
+              class="h-[16rem] sm:h-[20rem] md:h-full w-full object-cover"
             />
             <a href="" class="absolute"
               ><img
