--- a/travelata-master/src/_includes/parts/home/cultura-areco-en.njk
+++ b/travelata-master/src/_includes/parts/home/cultura-areco-en.njk
@@ -10,8 +10,9 @@
     >
       <div class="">
         <h2 class="titular-principal text-white mt-2 md:mb-8 uppercase">
-          Amplia oferta de entretenimiento <br />
-          y cultura
+          Wide range of <br />
+          entertainment and <br class="hidden md:block" />
+          culture offerings
         </h2>
       </div>
     </div>
@@ -25,10 +26,10 @@
             class="border lg:border-l-0 lg:border-t-0 lg:border-b-0 lg:border-r-0 border-orangeTropezon px-10 lg:px-0 py-10 flex flex-col gap-y-5 relative"
           >
             <div
-              class="border border-l-0 border-orangeTropezon absolute top-0 -left-96 lg:w-[53rem] xl:w-[59rem] 2xl:w-[62rem] h-[15rem] hidden lg:block"
+              class="border border-l-0 border-orangeTropezon absolute top-0 -left-96 lg:w-[53rem] xl:w-[59rem] 2xl:w-[62rem] h-[16rem] hidden lg:block"
             ></div>
 
-            <p class="text-white parrafo tracking-widest lg:pr-1 xl:pr-2">
+            <p class="text-white parrafo tracking-widest lg:pr-1 xl:pr-8">
               “The socio-cultural profile of San Antonio de Areco is incredible.
               The diversity and culture present there are very interesting. It
               is the birthplace of some of the best artisans and goldsmiths in
