--- a/travelata-master/src/_includes/parts/home/hero-areco-en.njk
+++ b/travelata-master/src/_includes/parts/home/hero-areco-en.njk
@@ -27,13 +27,15 @@
         >reco
       </h1>
       <p class="subtitulo-hero text-white uppercase">
-        A large town with the distinct <br class="block md:hidden" />
-        characteristics of a small-scale community
+        A large town with the distinct <br class="block sm:hidden" />
+        characteristics
+        <br class="hidden sm:block md:hidden lg:block xl:hidden" />
+        of a small-scale community
       </p>
 
       <!--btn fixed desk-->
       <a
-        href="#formulario-desk"
+        href="#formulario-section"
         class="hidden md:block fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
       >
         <img
@@ -45,7 +47,7 @@
 
       <!--btn fixed desk-->
       <a
-        href="#formulario-mob"
+        href="#formulario-section"
         class="block md:hidden fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
       >
         <img
