--- a/travelata-master/src/_includes/parts/home/hero-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/hero-home-en.njk
@@ -34,13 +34,13 @@
       >reco
     </h1>
     <p class="subtitulo-hero text-white uppercase">
-      The quality of life in the <br class="block md:hidden" />
+      The quality of life in the <br class="block lg:hidden" />
       countryside, close to the city.
     </p>
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-desk"
+      href="#formulario-section"
       class="hidden md:block fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
@@ -52,7 +52,7 @@
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-mob"
+      href="#formulario-section"
       class="block md:hidden fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
