--- a/travelata-master/src/_includes/parts/home/hero-home.njk
+++ b/travelata-master/src/_includes/parts/home/hero-home.njk
@@ -34,13 +34,13 @@
       >reco
     </h1>
     <p class="subtitulo-hero text-white">
-      LA CALIDAD DE VIDA DEL CAMPO, <br class="block md:hidden" />
+      LA CALIDAD DE VIDA DEL CAMPO, <br class="block lg:hidden" />
       MUY CERCA DE LA CIUDAD
     </p>
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-desk"
+      href="#formulario-section"
       class="hidden md:block fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
@@ -52,7 +52,7 @@
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-mob"
+      href="#formulario-section"
       class="block md:hidden fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
