--- a/travelata-master/src/_includes/parts/home/nosotros-quienes.njk
+++ b/travelata-master/src/_includes/parts/home/nosotros-quienes.njk
@@ -15,7 +15,7 @@
 
     <!--TESTIMONIOS-->
     <div
-      class="grid grid-cols-[minmax(0,300px)] items-center justify-center md:grid-cols-3 gap-y-10 md:gap-x-10 font-tradeGothicLt text-sm xl:text-base"
+      class="grid grid-cols-[minmax(0,300px)] items-center justify-center md:grid-cols-3 gap-y-10 md:gap-x-10 font-tradeGothicLt text-sm md:text-xs lg:text-sm xl:text-base"
     >
       <!--1-->
       <div class="shadow-2xl">
