--- a/travelata-master/src/_includes/parts/home/responsables-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/responsables-home-en.njk
@@ -51,8 +51,8 @@
         <h6
           class="text-orangeTropezon tracking-widest text-xs md:text-sm xl:text-[1.29rem] xl:leading-7 font-tradeGothicLt leading-6"
         >
-          “Un proyecto familiar que se <br />
-          mantiene con las generaciones"
+          “A family project that <br />
+          endures through generations"
         </h6>
         <div class="pt-10 flex justify-center items-center">
           <a
