--- a/travelata-master/src/_includes/parts/home/revistas-areco-en.njk
+++ b/travelata-master/src/_includes/parts/home/revistas-areco-en.njk
@@ -12,7 +12,8 @@
     >
       <div class="">
         <h2 class="titular-principal text-white mt-2 md:mb-8 uppercase">
-          Media articles about San Antonio de Areco
+          Media articles about <br class="hidden md:block" />
+          San Antonio de Areco
         </h2>
       </div>
     </div>
