--- a/travelata-master/src/_includes/parts/home/testimonios-home.njk
+++ b/travelata-master/src/_includes/parts/home/testimonios-home.njk
@@ -146,7 +146,7 @@
 
       <!--OTRO-->
       <div
-        class="tours mt-10 flex flex-col lg:flex-row-reverse justify-center relative"
+        class="tours mt-10 flex flex-col lg:flex-row-reverse justify-center relative hidden"
         data-x-data
         data-x-intersect="anime({ targets: '.tours a', translateY: [100, 0], opacity: [0, 1], delay: anime.stagger(150), duration: 500 ,easing: 'easeOutQuad' })"
       >
