--- a/travelata-master/src/_includes/parts/home/ubicacion-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/ubicacion-home-en.njk
@@ -26,12 +26,12 @@
           class="bg-blueTropezon w-[23rem] h-[23rem] xl:w-[23rem] xl:h-[23rem] flex flex-col text-left items-center gap-y-3 md:gap-y-16 justify-center px-5 xl:px-7"
         >
           <h1
-            class="lg:text-[1.1rem] text-orangeTropezon lg:leading-6 font-tradeGothicLt tracking-[0.18em] lg:pt-2 lg:pl-4 xl:pl-9"
+            class="lg:text-[1.1rem] text-orangeTropezon lg:leading-6 font-tradeGothicLt tracking-[0.18em] lg:pt-2 lg:pl-9 xl:pl-9"
           >
             A safe and natural environment at an ideal
-            <br class="hidden md:block" />
+            <br class="hidden xl:block" />
             distance to establish a weekend house or a
-            <br class="hidden md:block" />
+            <br class="hidden xl:block" />
             permanent residence.
           </h1>
           <div
