--- a/travelata-master/src/_includes/parts/home/galeria-tropezon.njk
+++ b/travelata-master/src/_includes/parts/home/galeria-tropezon.njk
@@ -52,8 +52,12 @@
         </div>
       </div>
       <!-- Agrega los botones de navegación -->
-      <div class="swiper-button-next absolute right-6 2xl:-right-10"></div>
-      <div class="swiper-button-prev absolute left-6 2xl:-left-10"></div>
+      <div
+        class="swiper-button-next absolute right-6 md:right-2 xl:right-6 2xl:-right-10"
+      ></div>
+      <div
+        class="swiper-button-prev absolute left-6 md:left-2 xl:left-6 2xl:-left-10"
+      ></div>
     </div>
   </div>
 </div>
