--- a/travelata-master/src/_includes/parts/home/hero-quienes-en.njk
+++ b/travelata-master/src/_includes/parts/home/hero-quienes-en.njk
@@ -1,5 +1,5 @@
 <section
-  class="h-[28rem] md:h-screen 2xl:h-[39rem] bg-cover md:bg-center md:bg-fixed 2xl:bg-bottom text-center hero-quienes-bg"
+  class="h-[28rem] md:h-[39rem] 2xl:h-[46rem] bg-cover md:bg-center md:bg-fixed 2xl:bg-bottom text-center hero-quienes-bg"
 >
   <div class="container h-full flex justify-center items-start">
     <h1
@@ -18,7 +18,7 @@
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-desk"
+      href="#formulario-section"
       class="hidden md:block fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
@@ -30,7 +30,7 @@
 
     <!--btn fixed desk-->
     <a
-      href="#formulario-mob"
+      href="#formulario-section"
       class="block md:hidden fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
     >
       <img
