--- a/travelata-master/src/_includes/parts/home/hero-tropezon-en.njk
+++ b/travelata-master/src/_includes/parts/home/hero-tropezon-en.njk
@@ -24,7 +24,7 @@
 
       <!--btn fixed desk-->
       <a
-        href="#formulario-desk"
+        href="#formulario-section"
         class="hidden md:block fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
       >
         <img
@@ -36,7 +36,7 @@
 
       <!--btn fixed desk-->
       <a
-        href="#formulario-mob"
+        href="#formulario-section"
         class="block md:hidden fixed bottom-2 z-[45] right-2 md:right-5 border-2 md:border-4 transition ease-in-out duration-300 border-orangeTropezon hover:border-blueTropezon rounded-full bg-orangeTropezon p-1 hover:bg-blueTropezon"
       >
         <img
