--- a/travelata-master/src/_includes/parts/home/nosotros-quienes-en.njk
+++ b/travelata-master/src/_includes/parts/home/nosotros-quienes-en.njk
@@ -13,7 +13,7 @@
 
     <!--TESTIMONIOS-->
     <div
-      class="grid grid-cols-[minmax(0,300px)] items-center justify-center md:grid-cols-3 gap-y-10 md:gap-x-10 font-tradeGothicLt text-sm xl:text-base"
+      class="grid grid-cols-[minmax(0,300px)] items-center justify-center md:grid-cols-3 gap-y-10 md:gap-x-10 font-tradeGothicLt text-sm md:text-xs lg:text-sm xl:text-base"
     >
       <!--1-->
       <div class="shadow-2xl">
@@ -25,11 +25,12 @@
           />
         </div>
         <div
-          class="border border-orangeTropezon p-5 md:p-2 lg:p-10 flex flex-col"
+          class="border border-orangeTropezon p-5 md:p-2 lg:py-10 lg:px-9 flex flex-col"
         >
           <p class="h-[8rem]">
-            "Somos Correntinos, de nacimiento, hemos vivido mucho en el campo y
-            San Antonio de Areco es la cuna de todo esto que tanto amamos"
+            "We are Correntinos, born and raised. We have spent a lot of time in
+            the countryside, and San Antonio de Areco is the birthplace of
+            everything that we hold dear"
           </p>
           <div class="flex items-center gap-x-4">
             <hr class="border border-orangeTropezon w-[1.5rem] h-[0.5px]" />
@@ -51,8 +52,8 @@
           class="border border-orangeTropezon p-5 md:p-2 lg:p-10 flex flex-col"
         >
           <p class="h-[8rem]">
-            "El Tropezón es sin duda nuestro desarrollo preferido. Lo vivimos y
-            respiramos todos los dias. Es nuestra casa"
+            "El Tropezón is undoubtedly our favorite development. We live and
+            breathe it every day. It is our home"
           </p>
           <div class="flex items-center gap-x-4">
             <hr class="border border-orangeTropezon w-[1.5rem] h-[0.5px]" />
@@ -73,9 +74,9 @@
           class="border border-orangeTropezon p-5 md:p-2 lg:p-10 flex flex-col"
         >
           <p class="h-[8rem]">
-            "San Antonio de Areco es nuestro lugar en el mundo. Acá tenemos
-            nuestros amigos, acá vivimos durante muchos años y acá volveremos
-            siempre."
+            "San Antonio de Areco is our place in the world. Our friends are
+            here. It is also where we have lived for many years, and it is the
+            place we will always return to"
           </p>
           <div class="flex items-center gap-x-4">
             <hr class="border border-orangeTropezon w-[1.5rem] h-[0.5px]" />
