--- a/travelata-master/src/_includes/parts/home/ubicacion-home.njk
+++ b/travelata-master/src/_includes/parts/home/ubicacion-home.njk
@@ -29,8 +29,8 @@
             class="lg:text-[1.1rem] text-orangeTropezon lg:leading-6 font-tradeGothicLt tracking-[0.18em] lg:pt-2 lg:pl-4 xl:pl-9"
           >
             Un entorno seguro y natural, a una distancia ideal para establecer
-            <br class="hidden md:block" />
-            una casa de fin de <br class="hidden md:block" />
+            <br class="hidden xl:block" />
+            una casa de fin de <br class="hidden xl:block" />
             semana o una vivienda permanente.
           </h1>
           <div
