--- a/travelata-master/src/_includes/components/footer-en.njk
+++ b/travelata-master/src/_includes/components/footer-en.njk
@@ -51,10 +51,10 @@
               href="https://goo.gl/maps/42MsMZwKwQcmbJ8U7"
               target="_blank"
               class="hover:underline tracking-widest text-sm leading-3"
-              >Ruta Nº8 Km 116,<br class="block lg:hidden" />
+              >Route No. 8 Km 116,<br class="block lg:hidden" />
               San <br class="hidden lg:block" />
               Antonio de Areco, <br class="block lg:hidden" />
-              Prov de Bs As</a
+              Buenos Aires Province</a
             >
           </li>
           <li class="mb-1">
