--- a/travelata-master/src/_includes/parts/home/contenido-quienes.njk
+++ b/travelata-master/src/_includes/parts/home/contenido-quienes.njk
@@ -54,7 +54,7 @@
           A nivel real estate, Areco reúnele las condiciones que todo
           desarrollador busca. Se encuentra a 30 min de Pilar y 1 hora de BA,
           siendo el principio de la zona nublo agro industrial, indiscutido
-          motor del país. El Tropezon es sin duda nuestro desarrollo preferido.
+          motor del país. El Tropezón es sin duda nuestro desarrollo preferido.
           Lo vivimos y respiramos todos los dias. Es nuestra casa. Nuestro padre
           planto los arboles hace mas de 30 años, nosotros crecimos ahi y es el
           lugar que le deseamos a nuestros hijos. Como dijimos antes es el
@@ -84,7 +84,7 @@
           A nivel real estate, Areco reúnele las condiciones que todo
           desarrollador busca. Se encuentra a 30 min de Pilar y 1 hora de BA,
           siendo el principio de la zona nublo agro industrial, indiscutido
-          motor del país. El Tropezon es sin duda nuestro desarrollo preferido.
+          motor del país. El Tropezón es sin duda nuestro desarrollo preferido.
           Lo vivimos y respiramos todos los dias. Es nuestra casa. Nuestro padre
           planto los arboles hace mas de 30 años, nosotros crecimos ahi y es el
           lugar que le deseamos a nuestros hijos. Como dijimos antes es el
