--- a/travelata-master/src/_includes/parts/home/responsables-home-en.njk
+++ b/travelata-master/src/_includes/parts/home/responsables-home-en.njk
@@ -46,7 +46,7 @@
         <h2 class="titular-principal text-blueTropezon mt-2 mb-2 md:mb-8">
           MEET THE <br />
           CREATORS OF THE <br />
-          DEVELOPMENT
+          DEVELOPERS
         </h2>
         <h6
           class="text-orangeTropezon tracking-widest text-xs md:text-sm xl:text-[1.29rem] xl:leading-7 font-tradeGothicLt leading-6"
@@ -75,13 +75,13 @@
       <h2 class="titular-principal text-blueTropezon mt-2 mb-2">
         MEET THE <br />
         CREATORS OF THE <br />
-        DEVELOPMENT
+        DEVELOPERS
       </h2>
       <h6
         class="text-orangeTropezon tracking-widest text-xs sm:text-sm font-tradeGothicLt leading-4"
       >
-        “Un proyecto familiar que se <br />
-        mantiene con las generaciones"
+        “A family project that endures <br />
+        through generations"
       </h6>
       <div class="pt-5">
         <a
