--- a/travelata-master/src/_includes/parts/home/revistas-tropezon-en.njk
+++ b/travelata-master/src/_includes/parts/home/revistas-tropezon-en.njk
@@ -12,9 +12,9 @@
     >
       <div class="">
         <h2 class="titular-principal text-white mt-2 md:mb-8 uppercase">
-          Journalistic Notes <br />
-          about EL TROPEZÓN <br />
-          DE ARECO
+          Media articles <br />
+          about El Tropezón <br />
+          de Areco
         </h2>
       </div>
     </div>
