--- a/travelata-master/src/_includes/components/footer.njk
+++ b/travelata-master/src/_includes/components/footer.njk
@@ -54,7 +54,7 @@
               >Ruta Nº8 Km 116,<br class="block lg:hidden" />
               San <br class="hidden lg:block" />
               Antonio de Areco, <br class="block lg:hidden" />
-              Prov de Bs As</a
+              Provincia de Buenos Aires</a
             >
           </li>
           <li class="mb-1">
