--- a/travelata-master/src/_includes/components/nav-en.njk
+++ b/travelata-master/src/_includes/components/nav-en.njk
@@ -22,7 +22,7 @@
         </button>
         <a
           href="/home-en/"
-          class="w-1/3 flex justify-end md:justify-center items-center"
+          class="w-1/3 flex justify-center md:justify-center items-center"
         >
           <img
             src="../../assets/img/el_tropezon_logo_color.svg"
@@ -31,12 +31,21 @@
           />
         </a>
 
-        <a
-          href="#formulario-section"
-          class="text-orangeTropezon w-1/3 justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
-        >
-          <span>Schedule</span><span>your</span><span>visit</span>
-        </a>
+        <div class="flex flex-col w-1/3 items-end">
+          <a
+            href="#formulario-section"
+            id="anclaje-visita"
+            class="text-orangeTropezon w-full justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
+          >
+            <span>Schedule</span><span>your</span><span>visit</span>
+          </a>
+          <div
+            class="text-orangeTropezon font-hoeflerText font-extrabold text-xs"
+          >
+            <a href="/" class="">ES</a> |
+            <span class="text-white"><a href="/home-en/">EN</a></span>
+          </div>
+        </div>
       </div>
 
       {% set navPages = collections.all | eleventyNavigation %}
