--- a/travelata-master/src/_includes/components/nav.njk
+++ b/travelata-master/src/_includes/components/nav.njk
@@ -23,7 +23,7 @@
         </button>
         <a
           href="/"
-          class="w-1/3 flex justify-end md:justify-center items-center"
+          class="w-1/3 flex justify-center md:justify-center items-center"
         >
           <img
             src="../../assets/img/el_tropezon_logo_color.svg"
@@ -31,14 +31,21 @@
             alt=""
           />
         </a>
-
-        <a
-          href="#formulario-section"
-          id="anclaje-visita"
-          class="text-orangeTropezon w-1/3 justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
-        >
-          <span>Coordiná</span><span>tu</span><span>visita</span>
-        </a>
+        <div class="flex flex-col w-1/3 items-end">
+          <a
+            href="#formulario-section"
+            id="anclaje-visita"
+            class="text-orangeTropezon w-full justify-end items-center hover:text-white b transition ease-in-out duration-300 font-hoeflerText space-x-1 hidden md:flex"
+          >
+            <span>Coordiná</span><span>tu</span><span>visita</span>
+          </a>
+          <div
+            class="text-orangeTropezon font-hoeflerText font-extrabold text-xs"
+          >
+            <span class=""><a href="/" class="text-white">ES</a></span> |
+            <a href="/home-en/">EN</a>
+          </div>
+        </div>
       </div>
 
       {% set navPages = collections.all | eleventyNavigation %}
